T07/S3: implement HLS playback flow
